[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/minijuego_bloques.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites.png" type="Texture" id=2]
[ext_resource path="res://assets/stolen_sea.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 64, 6 )

[node name="minijuego_bloques" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 263, 156 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="grua" type="Sprite" parent="."]
position = Vector2( 140, 120 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 22.16, 11.706, 193, 248 )

[node name="piso1" type="StaticBody2D" parent="."]
position = Vector2( 270, 232 )

[node name="sprite" type="Sprite" parent="piso1"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 575, 146, 130, 13 )

[node name="shape" type="CollisionShape2D" parent="piso1"]
shape = SubResource( 11 )

[node name="block_start" type="Position2D" parent="."]
position = Vector2( 40, 123 )

[node name="ocean" type="Area2D" parent="."]
position = Vector2( 270, 268 )

[node name="shape" type="CollisionPolygon2D" parent="ocean"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 11, 22 )
polygon = PoolVector2Array( -248, -16, 220, -12, 265, -177, 462, -218, 608, -208, 457, -18, 187, 70, -262, 0 )

[node name="counter" type="Label" parent="."]
margin_left = 414.0
margin_top = 83.0
margin_right = 433.0
margin_bottom = 97.0
custom_colors/font_color = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color_shadow = Color( 0.368627, 0.494118, 0.709804, 1 )
text = "4"
align = 1

[node name="ending_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="body_entered" from="ocean" to="." method="_on_ocean_body_entered"]
[connection signal="timeout" from="ending_timer" to="." method="_on_ending_timer_timeout"]
